# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Service Templates
###############################################################################

alias(
    name = "grpc_service",
    actual = "//alpha_system/template/grpc_service",
)

alias(
    name = "ims_data_service",
    actual = "//alpha_system/template/ims_data_service",
)

###############################################################################
# Core Services
###############################################################################

# The service aliases are used in scripts/run_*.sh to start each service
alias(
    name = "cmdb",
    actual = "//alpha_system/core/cmdb/cmdb_service:cmdb",
)

# The push aliases are used in the root folder BUILD file to build & push containers
alias(
    name = "cmdb_push",
    actual = "//alpha_system/core/cmdb/cmdb_service:push",
)

alias(
    name = "dbgw",
    actual = "//alpha_system/core/dbgw/dbgw_service:dbgw",
)

alias(
    name = "dbgw_push",
    actual = "//alpha_system/core/dbgw/dbgw_service:push",
)

alias(
    name = "imdb",
    actual = "//alpha_system/core/imdb/imdb_service:imdb",
    visibility = ["//visibility:public"],
)

alias(
    name = "imdb_push",
    actual = "//alpha_system/core/imdb/imdb_service:push",
    visibility = ["//visibility:public"],
)

alias(
    name = "smdb",
    actual = "//alpha_system/core/smdb/smdb_service:smdb",
)

alias(
    name = "smdb_push",
    actual = "//alpha_system/core/smdb/smdb_service:push",
    visibility = ["//visibility:public"],
)

###############################################################################
# MDS Services
###############################################################################

alias(
    name = "kaiko_proxy",
    actual = "//alpha_system/mds/kaiko/kaiko_proxy:kaiko_proxy",
    visibility = ["//visibility:public"],
)

alias(
    name = "kaiko_proxy_push",
    actual = "//alpha_system/mds/kaiko/kaiko_proxy:push",
    visibility = ["//visibility:public"],
)

alias(
    name = "mddb",
    actual = "//alpha_system/mds/mddb/mddb_service:mddb",
    visibility = ["//visibility:public"],
)

alias(
    name = "mddb_push",
    actual = "//alpha_system/mds/mddb/mddb_service:push",
)


###############################################################################
# IMS Data Services
###############################################################################

alias(
    name = "binance_coin_future",
    actual = "//alpha_system/ims_data/binance/binance_coin_future",
)

alias(
    name = "binance_coin_future_push",
    actual = "//alpha_system/ims_data/binance/binance_coin_future:push",
)

alias(
    name = "binance_coin_future_testnet",
    actual = "//alpha_system/ims_data/binance/binance_coin_future_testnet",
)

alias(
    name = "binance_coin_future_testnet_push",
    actual = "//alpha_system/ims_data/binance/binance_coin_future_testnet:push",
)

alias(
    name = "binance_spot",
    actual = "//alpha_system/ims_data/binance/binance_spot",
)

alias(
    name = "binance_spot_push",
    actual = "//alpha_system/ims_data/binance/binance_spot:push",
)

alias(
    name = "binance_spot_testnet",
    actual = "//alpha_system/ims_data/binance/binance_spot_testnet",
)

alias(
    name = "binance_spot_testnet_push",
    actual = "//alpha_system/ims_data/binance/binance_spot_testnet:push",
)

alias(
    name = "binance_usd_future",
    actual = "//alpha_system/ims_data/binance/binance_usd_future",
)

alias(
    name = "binance_usd_future_push",
    actual = "//alpha_system/ims_data/binance/binance_usd_future:push",
)

alias(
    name = "binance_usd_future_testnet",
    actual = "//alpha_system/ims_data/binance/binance_usd_future_testnet",
)

alias(
    name = "binance_usd_future_testnet_push",
    actual = "//alpha_system/ims_data/binance/binance_usd_future_testnet:push",
)
