# Make all aliases public by default
package(default_visibility = ["//visibility:public"])

###############################################################################
# Service Templates
###############################################################################

alias(
    name = "grpc_service",
    actual = "//alpha_system/template/grpc_service",
)

###############################################################################
# Core Services
###############################################################################

# The service aliases are used in scripts/run_*.sh to start each service
alias(
    name = "cmdb",
    actual = "//alpha_system/core/cmdb/cmdb_service:cmdb",
)

# The push aliases are used in the root folder BUILD file to build & push containers
alias(
    name = "cmdb_push",
    actual = "//alpha_system/core/cmdb/cmdb_service:push",
)

alias(
    name = "dbgw",
    actual = "//alpha_system/core/dbgw/dbgw_service:dbgw",
)

alias(
    name = "dbgw_push",
    actual = "//alpha_system/core/dbgw/dbgw_service:push",
)

alias(
    name = "imdb",
    actual = "//alpha_system/core/imdb/imdb_service:imdb",
    visibility = ["//visibility:public"],
)

alias(
    name = "imdb_push",
    actual = "//alpha_system/core/imdb/imdb_service:push",
    visibility = ["//visibility:public"],
)

alias(
    name = "smdb",
    actual = "//alpha_system/core/smdb/smdb_service:smdb",
)

alias(
    name = "smdb_push",
    actual = "//alpha_system/core/smdb/smdb_service:push",
    visibility = ["//visibility:public"],
)

###############################################################################
# MDS Services
###############################################################################

alias(
    name = "mddb",
    actual = "//alpha_system/mds/mddb/mddb_service:mddb",
    visibility = ["//visibility:public"],
)

alias(
    name = "mddb_push",
    actual = "//alpha_system/mds/mddb/mddb_service:push",
)
