[package]
name = "common_order"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lints]
workspace = true


[dependencies]
# Internal crates
common_exchange = {workspace = true}
encoding_utils = { workspace = true }
# External crates
chrono = { workspace = true }
rust_decimal = { workspace = true }