[package]
name = "common_orderbook"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true


[lints]
workspace = true


[dependencies]
# External crates
chrono = { workspace = true }
rust_decimal = { workspace = true }

# For testing
[dev-dependencies]
rust_decimal_macros = { workspace = true }