load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "binary_protocol",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    proc_macro_deps = [
        # Internal macros
        "//alias/macro:byte_serialization_macro",
    ],
    tags = [
        "binary_protocol",
        "protocol",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal dependencies
        "//alias:stream_errors",
        # External dependencies
        "//thirdparty/crates:bon",
        "//thirdparty/crates:bytes",
        "//thirdparty/crates:rkyv",
    ],
)

rust_doc(
    name = "doc",
    crate = ":binary_protocol",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":binary_protocol",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
