[package]
name = "binary_protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true


[dependencies]
# Internal dependencies
byte_serialization_macro = { workspace = true }
stream_errors = { workspace = true }

# External dependencies
bon = { workspace = true }
bytes = { workspace = true }
rkyv = { workspace = true }

[lints]
workspace = true
