load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library")

rust_library(
    name = "trait_exec_integration",
    srcs = glob([
        "src/**",
    ]),
    crate_root = "src/lib.rs",
    proc_macro_deps = [
        "//thirdparty/crates:trait-variant",
    ],
    tags = [
        "trait",
        "trait_exec_integration",
    ],
    visibility = ["//visibility:public"],
    deps = [
        # Internal crates
        "//alias:common_errors",
        "//alias:common_order",
    ],
)

rust_doc(
    name = "doc",
    crate = ":trait_exec_integration",
    tags = ["doc"],
    visibility = ["//visibility:public"],
)

rust_doc_test(
    name = "doc_test",
    crate = ":trait_exec_integration",
    tags = ["doc-test"],
    visibility = ["//visibility:public"],
)
