[package]
name = "alpha_socket"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies


# External dependencies
memmap2 = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
ctrlc = { workspace = true }
criterion = { workspace = true }
hdrhistogram = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "alpha_socket_benches"
harness = false

[[example]]
name = "tick_archiver"
path = "examples/archive/tick_archiver/archiver_main.rs"

[[example]]
name = "tick_client"
path = "examples/archive/tick_client/client_main.rs"

[[example]]
name = "tick_server"
path = "examples/archive/tick_server/server_main.rs"

[[example]]
name = "echo_client"
path = "examples/echo/client/main.rs"

[[example]]
name = "echo_server"
path = "examples/echo/server/main.rs"

[lints]
workspace = true


